# cardinsa-v2

./: PHASE_1_DAY_5_COMPLETE.md  PHASE_1_FRONTEND_SECURITY_TASKS.md  PULL_REQUEST_SUMMARY.md  SECURITY_REMEDIATION_STEPS.md
cardinsa-backend/: .env  .env.example  .gitignore  alembic.ini  cardinsa_backend_audit.py  docker conf.txt  pyproject.toml  requirements.txt  seeds.py  test_device_fingerprint.py
cardinsa-backend/alembic/: env.py
cardinsa-backend/alembic/versions/: 7e845a7c1fda_baseline_v1_1.py  93cf1645dab5_merge_heads.py  a40bfa0084a1_add_token_blacklist_table.py  a8702545e32a_add_audit_log_table.py
cardinsa-backend/app/: main.py
cardinsa-backend/app/api/: health_route.py
cardinsa-backend/app/api/v1/: employee_router.py  router.py
cardinsa-backend/app/common/: pagination.py
cardinsa-backend/app/core/: __init__.py  base_repository.py  base_service.py  cache.py  database.py  dependencies.py  enums.py  error_handlers.py  events.py  exceptions.py  logging.py  mailer.py  middleware.py  mixins.py  rate_limiting.py  responses.py  schemas.py  security.py  settings.py  validators.py
cardinsa-backend/app/modules/accounting/: README.md
cardinsa-backend/app/modules/accounting/models/: gl_account_model.py  gl_entry_model.py  gl_journal_model.py  gl_period_model.py  tax_rule_model.py
cardinsa-backend/app/modules/accounting/repositories/: glaccount_repository.py  glentry_repository.py  gljournal_repository.py  glperiod_repository.py  taxrule_repository.py
cardinsa-backend/app/modules/accounting/routes/: accounting_route.py  entries_route.py  journals_route.py
cardinsa-backend/app/modules/accounting/schemas/: glaccount_schema.py  glentry_schema.py  gljournal_schema.py  glperiod_schema.py  taxrule_schema.py
cardinsa-backend/app/modules/accounting/services/: glaccount_service.py  glentry_service.py  taxrule_service.py  (+2 more)
cardinsa-backend/app/modules/common/: README.md  base_repository.py  base_service.py  deps.py  enums.py  exceptions.py  filters.py  pagination_models.py  query.py  response.py  validators.py
cardinsa-backend/app/modules/org/: permissions.py
cardinsa-backend/app/modules/reinsurance/: README.md
cardinsa-backend/app/modules/treaty/: README.md
cardinsa-backend/app/utils/: crypto.py  files.py  pagination.py  slug.py  time.py
cardinsa-backend/scripts/: init_db.py  seed_data.py
cardinsa-backend/tools/: generate_structure.py
(+612 files in other folders)
